--- a/css/main.css
+++ b/css/main.css
@@ -32,28 +32,28 @@ a {
   background-color: #cabdb2;
 }
 
-.list {
-  display: inline;
-  text-align: left;
-}
-
-.lists {
-  display: inline;
-  border-top: 2px solid #9a816d;
-}
-
-ol {
-  display: inline-table;
-  list-style-type: none;
+dl {
+  display: inline-block;
+  width: 100%;
+  margin: 0;
   font-size: .875rem;
-  padding-left: 0;
-  max-width: 100px;
-  margin: 1rem;
-  }
+  border-top: 2px solid #9a816d;
+  border-bottom: 2px solid #9a816d;
+  padding: 1rem 0rem;
+  margin-bottom: 1rem;
+}
 
-.list2 {
+dd {
+  display: inline-block;
   font-style: italic;
-  display: inline;
+  width: 45%;
+  margin: 0;
+}
+
+dt {
+  display: inline-block;
+  width: 45%;
+  margin: 0;
 }
 
 .btn {
@@ -67,12 +67,9 @@ ol {
 
 .btn-wrap {
   text-align: center;
+  padding: 1em;
 }
 
 .link-card:hover .btn {
   background-color: #512200;
-}
-
-p {
-  margin-bottom: 0;
 }
