Fix indentation issues

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ dl {
   font-size: .875rem;
   border-top: 2px solid #9a816d;
   border-bottom: 2px solid #9a816d;
-  padding: 1rem 0rem;
+  padding: 1rem 0;
   margin-bottom: 1rem;
 }
 
